# labs_cooking_microservices_with_rust

./: .gitignore  Cargo.toml  README.md  book.toml  notes_db.md
book/: actor.html  app.html  configuration.html  data-serde.html  diesel.html  healthcheck.html  index.html  print.html  ratings-request.html  router.html  searchindex.js  setup.html
book-src/: SUMMARY.md  actor.md  app.md  configuration.md  data-serde.md  diesel.md  healthcheck.md  ratings-request.md  router.md  setup.md
ratings/: Cargo.toml  Dockerfile
ratings/src/: bin.rs  config.rs  db.rs  example.rs  health.rs  lib.rs  main.rs  ratings.rs
ratings/tests/: integration_tests.rs
reviews/: Cargo.toml  Dockerfile  db.sqlite
reviews/migrations/2018-04-07-230203_reviews/: up.sql
reviews/migrations/2018-04-15-161853_name/: down.sql  up.sql
reviews/src/: bin.rs  config.rs  db.rs  example.rs  graphql.rs  health.rs  lib.rs  models.rs  reviews.rs  schema.rs
slides/: devoxxfr_sample.html  index.html
slides/cast/: cargo_1.cast  test.cast
slides/css/: additions.css
slides/css/theme/: devoxxfr.css
slides/plugin/highlight/: highlight.js  highlight.pack.js
