[package]
name = "ratings"
version = "0.1.0"
authors = ["François Mockers <mockersf@gmail.com>"]

[lib]
name = "ratings"
path = "src/lib.rs"

[[bin]]
name = "ratings"
path = "src/bin.rs"

[dependencies]
gotham = "0.2"
gotham_derive = "0.2"

futures = "0.1"
hyper = "0.11"
mime = "0.3"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

lazy_static = "1.0"

time = "0.1"

log = "0.4"
slog = "2.2"
slog-term = "2.4"
slog-stdlog = "3.0"
slog-scope = "4.0"
slog-async = "2.3"
slog-envlogger = "2.1.0"
slog-json = "2.2.0"

[dev-dependencies]
rand = "0.4"
